# lazydokku

./: LICENSE  README.md  default.nix  py_cui_setup.patch  pyproject.toml  shell.nix  widgets.py
lazydokku/: core.py  fakedokku.py  main.py  widgets.py
