
[tool.poetry]
name = "lazydokku"
version = "0.1.0"
description = "TUI for dokku"
authors = ["Kostas Papakonstantinou <k@carrotwd.com>"]
license = "MIT"
packages = [
    { include = "lazydokku" },
]

[tool.poetry.dependencies]
py-cui = "^0.1.4"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
Faker = "^11.3.0"
black = "^21.12b0"

[tool.poetry.scripts]
lazydokku = "lazydokku.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
